--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,28 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
+  assets:
+    - assets/images/user_profile.png
+    - assets/images/recipe_inlustration.jpg
+    - assets/images/dennis-coffee-garden-logo.png
+    - assets/images/pangaunan_logo1.jpg
+    - assets/images/Dennis-Coffee-Garden-Daral.jpg
+    - assets/images/Dennis-Coffee-Garden-Panggih-Panggih.jpg
+    - assets/images/Dennis-Coffee-Garden-Pastil.jpg
+    - assets/images/Dennis-Coffee-Garden-Wadjit.jpg
+    - assets/images/Panganan.jpg
+    - assets/images/Panyam.jpg
+    - assets/images/Pasung.jpg
+    - assets/images/Pitis.jpg
+    - assets/images/Tabid-Tabid.jpg
+    - assets/images/Bawlu.jpg
+    - assets/images/Apam.jpg
+    - assets/images/beans.jpg
+    - assets/images/massa.jpg
+    - assets/images/rice.jpg
+    - assets/images/salad.jpg
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
