--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  google_maps_flutter: 0.5.21+6
+  font_awesome_flutter: ^8.2.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +63,13 @@ flutter:
     - assets/images/massa.jpg
     - assets/images/rice.jpg
     - assets/images/salad.jpg
+    - assets/images/Satti.jpg
+    - assets/images/Tiyula-Itum.jpg
+    - assets/images/Pyanggang.jpg
+    - assets/images/Junay.jpg
+    - assets/images/Syanlag.jpg
+    - assets/images/Pyuto.jpg
+    - assets/images/Agar-Agar.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
